[project]
name = "towards-catboost"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Dominguez Sanz",email = "dooreas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook (>=7.5.1,<8.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "category-encoders (>=2.9.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
